--- a/stylesheets/editor.less
+++ b/stylesheets/editor.less
@@ -1,7 +1,7 @@
 @import "ui-variables";
 @import "ui-mixins";
 
-.editor.mini {
+.editor.mini, .editor.mini::shadow {
   color: lighten(@text-color, 15%);
   background-color: darken(@input-background-color, 1%);
   border: 1px solid lighten(@input-border-color, 10%);
@@ -17,7 +17,7 @@
   }
 }
 
-.editor.editor-colors.mini.is-focused {
+.editor.editor-colors.mini.is-focused, .editor.editor-colors.mini.is-focused::shadow {
   color: @text-color;
   background-color: @input-background-color;
   border-color: @input-border-color;
@@ -30,6 +30,8 @@
 }
 
 // FIXME: these should go in syntax themes?
-.editor .gutter.drop-shadow {
-  -webkit-box-shadow: -2px 0 10px 2px #222;
+.editor, .editor::shadow {
+  .gutter.drop-shadow {
+    -webkit-box-shadow: -2px 0 10px 2px #222;
+  }
 }
