--- a/stylesheets/tabs.less
+++ b/stylesheets/tabs.less
@@ -11,18 +11,25 @@
   height: @tab-height + @tab-top-padding + @tab-bottom-border-height;
   background-image: -webkit-linear-gradient(top, @tab-bar-background-color, lighten(@tab-bar-background-color, 9%));
   box-shadow: inset 0 -8px 8px -4px rgba(0,0,0, .15);
-  padding: 0 10px;
+  padding: 0 10px 0 25px;
+  overflow-x: auto;
+  overflow-y: hidden;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
   &:after {
     content: "";
-    position: absolute;
-    bottom: 0;
+    position: fixed;
+    top: @tab-height + @tab-bottom-border-height + 1px; // + 1px border width
     height: @tab-bottom-border-height;
-    left: 0px;
-    width: 100%;
+    left: 0;
+    right: 0;
     background-color: @tab-background-color-active;
     border-bottom: 1px solid @tab-bar-border-color;
     border-top: 1px solid @tab-border-color;
+    pointer-events: none;
   }
 
   .tab {
@@ -97,10 +104,6 @@
       z-index: 1;
       padding-right: 10px
     }
-
-    &:first-child {
-      margin-left: 20px;
-    }
   }
 
   .tab.active {
@@ -133,8 +136,10 @@
 
   .placeholder {
     height: @tab-height + @tab-top-padding + @tab-bottom-border-height;
+    margin-left: -9px; // center between tabs
+    pointer-events: none;
     &:after {
-      top: @tab-height + @tab-top-padding + @tab-bottom-border-height;
+      top: @tab-height + @tab-top-padding + @tab-bottom-border-height - 2px;
     }
   }
 }
