--- a/stylesheets/lists.less
+++ b/stylesheets/lists.less
@@ -29,7 +29,7 @@
 
     li:not(.list-nested-item).selected.status-@{status},
     li.list-nested-item.selected.status-@{status} > .list-item {
-      color: @color;
+      color: darken(@color, 15%);
     }
   }
   .generate-list-item-status-color(@text-color-subtle, ignored);
