--- a/stylesheets/tree-view.less
+++ b/stylesheets/tree-view.less
@@ -24,6 +24,7 @@
 
 		.selected > .name,
 		.selected > .name:before,
+		.selected > .list-item.header:before,
 		.selected > .list-item > .name,
 		.selected > .list-item > .name:before {
 			color: #fff !important;
