Make resize handle a bit smaller
Leaves more room to drag the scrollbar. See https://github.com/atom/tree-view/issues/255

--- a/stylesheets/tree-view.less
+++ b/stylesheets/tree-view.less
@@ -9,6 +9,12 @@
 	}
 }
 
+.tree-view-resizer {
+	.tree-view-resize-handle {
+		width: 8px;
+	}
+}
+
 .focusable-panel {
 	opacity: 1;
 	background-image: -webkit-gradient(linear, left top, left bottom, from(#e8ecf1), to(#ebebeb));
