Upgrade selectors for Atom 1.0 compatibility

--- a/stylesheets/panels.less
+++ b/stylesheets/panels.less
@@ -9,21 +9,21 @@
   }
 }
 
-.tool-panel {
+atom-panel {
   .text(normal);
   position: relative;
 
   background-color: @tool-panel-background-color;
 
-  &.panel-bottom {
+  &.bottom {
     border-top: 1px solid @tool-panel-border-color;
   }
 
-  &.panel-left {
+  &.left {
     border-right: 1px solid @tool-panel-border-color;
   }
 
-  &.panel-right {
+  &.right {
     border-left: 1px solid @tool-panel-border-color;
   }
 
