Make tab bottom border positioned relative to bottom

--- a/stylesheets/tabs.less
+++ b/stylesheets/tabs.less
@@ -21,8 +21,8 @@
 
   &:after {
     content: "";
-    position: fixed;
-    top: @tab-height + @tab-bottom-border-height + 1px; // + 1px border width
+    position: absolute;
+    bottom: 0;
     height: @tab-bottom-border-height;
     left: 0;
     right: 0;
