--- a/styles/lists.less
+++ b/styles/lists.less
@@ -29,7 +29,7 @@
 
     li:not(.list-nested-item).selected.status-@{status},
     li.list-nested-item.selected.status-@{status} > .list-item {
-      color: darken(@color, 15%);
+      color: lighten(@color, 30%);
     }
   }
   .generate-list-item-status-color(@text-color-subtle, ignored);
