--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -7,7 +7,7 @@
 
 @text-color-info: #5293d8;
 @text-color-success: #529b2f;
-@text-color-warning: #ff982d;
+@text-color-warning: #C46300;
 @text-color-error: #c00;
 
 @text-color-ignored: @text-color-subtle;
