--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -84,4 +84,4 @@
 
 // Other
 
-@font-family: 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif;
+@font-family: 'SF UI Text', 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif;
