--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -1,14 +1,15 @@
 // Colors
 
-@text-color: #444;
-@text-color-subtle: #999;
+@text-color: #5D6278;
+@text-color-light: #AEB7C1;
+@text-color-subtle: #5c616c;
 @text-color-highlight: #000;
 @text-color-selected: #fff;
 
 @text-color-info: #5293d8;
-@text-color-success: #45A815;
-@text-color-warning: #CD8E00;
-@text-color-error: #c00;
+@text-color-success: #73d216;
+@text-color-warning: #F27835;
+@text-color-error: #FC4138;
 
 @text-color-ignored: @text-color-subtle;
 @text-color-added: @text-color-success;
@@ -17,16 +18,16 @@
 @text-color-removed: @text-color-error;
 
 @background-color-info: #0098ff;
-@background-color-success: #17ca65;
-@background-color-warning: #ff4800;
-@background-color-error: #c00;
-@background-color-highlight: rgba(0, 0, 0, .1);
-@background-color-selected: #6aa5e9;
+@background-color-success: #73d216;
+@background-color-warning: #F27835;
+@background-color-error: #FC4138;
+@background-color-highlight: #5294e2;
+@background-color-selected: #5294e2;
 
-@app-background-color: #ccc;
+@app-background-color: #ffffff;
 
-@base-background-color: #f4f4f4;
-@base-border-color: #9f9f9f;
+@base-background-color: #f5f6f7;
+@base-border-color: #CFD6E6;
 
 @pane-item-background-color: @base-background-color;
 @pane-item-border-color: @base-border-color;
@@ -57,7 +58,7 @@
 @tab-background-color-active: #f0f0f0;
 @tab-border-color: lighten(@base-border-color, 10%);
 
-@tree-view-background-color: #eee;
+@tree-view-background-color: #373D48;
 @tree-view-border-color: @base-border-color;
 
 @ui-site-color-1: @background-color-success; // green
