--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -26,16 +26,18 @@
 
 @app-background-color: #ffffff;
 
-@base-background-color: #f5f6f7;
-@base-border-color: #CFD6E6;
+@base-background-color: #ffffff;
+@base-border-color: #DFDFDF;
 
-@pane-item-background-color: @base-background-color;
+@grey-background-color: #F5F6F7;
+
+@pane-item-background-color: @grey-background-color;
 @pane-item-border-color: @base-border-color;
 
 @input-background-color: white;
 @input-border-color: fadeout(@base-border-color, 10%);
 
-@tool-panel-background-color: @base-background-color;
+@tool-panel-background-color: @grey-background-color;
 @tool-panel-border-color: @base-border-color;
 
 @inset-panel-background-color: #fff;
@@ -48,15 +50,15 @@
 @overlay-border-color: @base-border-color;
 
 @button-background-color: @base-background-color;
-@button-background-color-hover: lighten(@button-background-color, 5%);
-@button-background-color-selected: #888;
-@button-border-color: rgba(0, 0, 0, 0.15);
+@button-background-color-hover: @button-background-color;
+@button-background-color-selected: #D0D6E5;
+@button-border-color: #CFD6E6;
 
 @tab-bar-background-color: #d8d8d8;
-@tab-bar-border-color: #ddd;
-@tab-background-color: #e8e8e8;
+@tab-bar-border-color: @base-border-color;
+@tab-background-color: @base-background-color;
 @tab-background-color-active: #f0f0f0;
-@tab-border-color: lighten(@base-border-color, 10%);
+@tab-border-color: @base-border-color;
 
 @tree-view-background-color: #373D48;
 @tree-view-border-color: @base-border-color;
@@ -76,11 +78,11 @@
 
 @component-padding: 10px;
 @component-icon-padding: 5px;
-@component-icon-size: 16px;
+@component-icon-size: 24px;
 @component-line-height: 25px;
 @component-border-radius: 2px;
 
-@tab-height: 26px;
+@tab-height: 32px;
 
 
 // Other
