--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -2,8 +2,8 @@
 
 @text-color: #5D6278;
 @text-color-light: #AEB7C1;
-@text-color-subtle: #5c616c;
-@text-color-highlight: #000;
+@text-color-subtle: #A0A4AA;
+@text-color-highlight: #5c616c;
 @text-color-selected: #fff;
 
 @text-color-info: #5293d8;
