--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -5,8 +5,7 @@
   @border-shadow: inset 0 0 0 1px @border-color;
   @active-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
   color: @text-color;
-  background-color: transparent;
-  background-image: -webkit-linear-gradient(@color, darken(@color, 8%));
+  background-color: @button-background-color;
   box-shadow: @border-shadow;
 
   &:hover {
