--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -51,6 +51,7 @@
 
 @button-background-color: @base-background-color;
 @button-background-color-hover: @button-background-color;
+@button-background-color-disabled: #FBFCFC;
 @button-background-color-selected: #D0D6E5;
 @button-border-color: #CFD6E6;
 
