--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -27,7 +27,9 @@
 @app-background-color: #ffffff;
 
 @base-background-color: #ffffff;
-@base-border-color: #DFDFDF;
+@base-border-color: #DFDFDF
+
+@selected-border-bolor: #5294E2;
 
 @grey-background-color: #F5F6F7;
 
@@ -35,7 +37,7 @@
 @pane-item-border-color: @base-border-color;
 
 @input-background-color: white;
-@input-border-color: fadeout(@base-border-color, 10%);
+@input-border-color: @base-border-color;
 
 @tool-panel-background-color: @grey-background-color;
 @tool-panel-border-color: @base-border-color;
