fixed missing semicolon

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -19,7 +19,7 @@ atom-text-editor[mini], atom-text-editor[mini]::shadow {
 atom-text-editor[mini].is-focused, atom-text-editor[mini].is-focused::shadow {
   color: @text-color;
   background-color: @input-background-color;
-  border-color: @selected-border-bolor;
+  border-color: @selected-border-color;
   .placeholder-text {
     color: @text-color-subtle;
   }
