--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -27,9 +27,9 @@
 @app-background-color: #ffffff;
 
 @base-background-color: #ffffff;
-@base-border-color: #DFDFDF
+@base-border-color: #DFDFDF;
 
-@selected-border-bolor: #5294E2;
+@selected-border-color: #5294E2;
 
 @grey-background-color: #F5F6F7;
 
