--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -36,8 +36,14 @@
 @pane-item-background-color: @grey-background-color;
 @pane-item-border-color: @base-border-color;
 
+@button-background-color: @base-background-color;
+@button-background-color-hover: @button-background-color;
+@button-background-color-disabled: #FBFCFC;
+@button-background-color-selected: #D0D6E5;
+@button-border-color: #CFD6E6;
+
 @input-background-color: white;
-@input-border-color: @base-border-color;
+@input-border-color: @button-border-color;
 
 @tool-panel-background-color: @grey-background-color;
 @tool-panel-border-color: @base-border-color;
@@ -50,12 +56,6 @@
 
 @overlay-background-color: #ececec;
 @overlay-border-color: @base-border-color;
-
-@button-background-color: @base-background-color;
-@button-background-color-hover: @button-background-color;
-@button-background-color-disabled: #FBFCFC;
-@button-background-color-selected: #D0D6E5;
-@button-border-color: #CFD6E6;
 
 @tab-bar-background-color: #d8d8d8;
 @tab-bar-border-color: @base-border-color;
