--- a/styles/ui-mixins.less
+++ b/styles/ui-mixins.less
@@ -17,7 +17,7 @@
   color: @text-color-highlight;
 }
 .text(selected) {
-  font-weight: normal;
+  font-weight: bold;
   color: @text-color-selected;
   text-shadow: none;
 }
