--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -75,14 +75,14 @@
 
 // Sizes
 
-@font-size: 11px;
+@font-size: 13px;
 @input-font-size: 11px;
 @disclosure-arrow-size: 12px;
 
 @component-padding: 10px;
 @component-icon-padding: 5px;
 @component-icon-size: 24px;
-@component-line-height: 25px;
+@component-line-height: 32px;
 @component-border-radius: 2px;
 
 @tab-height: 32px;
@@ -90,4 +90,4 @@
 
 // Other
 
-@font-family: 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif;
+@font-family: 'Lato', 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif;
