--- a/styles/editor.less
+++ b/styles/editor.less
@@ -9,7 +9,7 @@ atom-text-editor[mini], atom-text-editor[mini]::shadow {
   border-radius: @component-border-radius;
   padding-left: @component-padding/2;
 
-  .cursor { border-color: #000; }
+  .cursor { border-color: #000; padding: 4px 0;}
   .selection .region { background-color: rgba(0, 0, 0, .2); }
   .placeholder-text {
     color: @text-color-subtle;
