--- a/styles/ui-mixins.less
+++ b/styles/ui-mixins.less
@@ -7,6 +7,11 @@
   color: @text-color;
   text-shadow: none;
 }
+.text(light) {
+  font-weight: normal;
+  color: @text-color-light;
+  text-shadow: none;
+}
 .text(subtle) {
   font-weight: normal;
   color: @text-color-subtle;
