--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -11,11 +11,11 @@
 @text-color-warning: #F27835;
 @text-color-error: #FC4138;
 
-@text-color-ignored: @text-color-subtle;
-@text-color-added: @text-color-success;
-@text-color-renamed: @text-color-info;
-@text-color-modified: @text-color-warning;
-@text-color-removed: @text-color-error;
+@text-color-ignored: lighten(@text-color-subtle, 20%);
+@text-color-added: lighten(@text-color-success, 20%);
+@text-color-renamed: lighten(@text-color-info, 20%);
+@text-color-modified: lighten(@text-color-warning, 20%);
+@text-color-removed: lighten(@text-color-error, 20%);
 
 @background-color-info: #0098ff;
 @background-color-success: #73d216;
