--- a/styles/lists.less
+++ b/styles/lists.less
@@ -5,7 +5,7 @@
 .list-group, .list-tree {
   li:not(.list-nested-item),
   li.list-nested-item > .list-item {
-    .text(normal);
+    .text(light);
   }
 
   .generate-list-item-text-color(@class) {
@@ -32,7 +32,7 @@
       color: darken(@color, 7%);
     }
   }
-  .generate-list-item-status-color(@text-color-subtle, ignored);
+  .generate-list-item-status-color(fadeout(@text-color-light, 50%), ignored);
   .generate-list-item-status-color(@text-color-added, added);
   .generate-list-item-status-color(@text-color-renamed, renamed);
   .generate-list-item-status-color(@text-color-modified, modified);
