--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -1,7 +1,7 @@
 // Colors
 
 @text-color: #5D6278;
-@text-color-light: #AEB7C1;
+@text-color-light: #B9C1CE;
 @text-color-subtle: #A0A4AA;
 @text-color-highlight: #5c616c;
 @text-color-selected: #fff;
