--- a/styles/overlays.less
+++ b/styles/overlays.less
@@ -5,7 +5,7 @@ atom-panel.modal, .overlay {
   background-color: @overlay-background-color;
   padding: @component-padding;
   border: 1px solid @overlay-border-color;
-  box-shadow: 0 0 10px @base-border-color;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   border-radius: @component-border-radius;
 
   atom-text-editor[mini] {
@@ -26,7 +26,7 @@ atom-panel.modal, .overlay {
 
       &.two-lines { padding: @component-padding/2 @component-padding; }
       &.selected {
-        color: @text-color;
+        color: @text-color-selected;
         background-color: @background-color-highlight;
       }
 
