--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -54,10 +54,10 @@
 @panel-heading-background-color: #c3c3c3;
 @panel-heading-border-color: transparent;
 
-@overlay-background-color: #ececec;
+@overlay-background-color: #f5f6f7;
 @overlay-border-color: @base-border-color;
 
-@tab-bar-background-color: #d8d8d8;
+@tab-bar-background-color: #f5f6f7;
 @tab-bar-border-color: @base-border-color;
 @tab-background-color: @base-background-color;
 @tab-background-color-active: #f0f0f0;
