--- a/index.less
+++ b/index.less
@@ -3,6 +3,7 @@
 @import "styles/text";
 @import "styles/git";
 @import "styles/sites";
+@import "styles/statusbar";
 @import "styles/messages";
 @import "styles/progress";
 @import "styles/buttons";
