changed font to source sans

--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -90,4 +90,4 @@
 
 // Other
 
-@font-family: 'Lato', 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif;
+@font-family: 'Source Sans Pro', 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif;
