hide scroll bar

--- a/styles/utilities.less
+++ b/styles/utilities.less
@@ -19,3 +19,7 @@
   .text(selected);
   background: @background-color-highlight;
 }
+
+.scrollbars-visible-always /deep/ ::-webkit-scrollbar {
+  display: none;
+}
