--- a/styles/atom.less
+++ b/styles/atom.less
@@ -4,3 +4,7 @@ atom-workspace {
   background-color: @app-background-color;
   border-top: 1px solid rgba(0, 0, 0, .4);
 }
+
+atom-panel-container {
+  z-index: 5;
+}
