Add border to status-bars in footer panel

--- a/styles/panels.less
+++ b/styles/panels.less
@@ -15,7 +15,8 @@ atom-panel, .tool-panel {
 
   background-color: @tool-panel-background-color;
 
-  &.bottom, &.panel-bottom {
+  &.bottom, &.panel-bottom,
+  &.footer, &.footer-bottom {
     border-top: 1px solid @tool-panel-border-color;
   }
 
