Allow easier clicking on tabs when in fullscreen mode

--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -102,7 +102,9 @@
     .title {
       position: relative;
       z-index: 1;
-      padding-right: 10px
+      margin-top: -@tab-top-padding - 1px;
+      padding-top: @tab-top-padding + 1px;
+      padding-right: 10px;
     }
   }
 
