--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -84,4 +84,4 @@
 
 // Other
 
-@font-family: '.SFNSText-Regular', 'SF UI Text', 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif;
+@font-family: 'BlinkMacSystemFont', 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif;
