--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -60,6 +60,9 @@
 @tree-view-background-color: #eee;
 @tree-view-border-color: @base-border-color;
 
+@scrollbar-background-color: #F9F9F9; // Needs to be opaque -> atom/atom/issues/4578
+@scrollbar-color: #C1C1C1;
+
 @ui-site-color-1: @background-color-success; // green
 @ui-site-color-2: @background-color-info; // blue
 @ui-site-color-3: @background-color-warning; // orange
