--- a/styles/editor.less
+++ b/styles/editor.less
@@ -1,7 +1,7 @@
 @import "ui-variables";
 @import "ui-mixins";
 
-atom-text-editor[mini], atom-text-editor[mini]::shadow {
+atom-text-editor[mini] {
   color: lighten(@text-color, 15%);
   background-color: darken(@input-background-color, 1%);
   border: 1px solid lighten(@input-border-color, 10%);
@@ -17,7 +17,7 @@ atom-text-editor[mini], atom-text-editor[mini]::shadow {
   }
 }
 
-atom-text-editor[mini].is-focused, atom-text-editor[mini].is-focused::shadow {
+atom-text-editor[mini].is-focused {
   color: @text-color;
   background-color: @input-background-color;
   border-color: @input-border-color;
@@ -30,7 +30,7 @@ atom-text-editor[mini].is-focused, atom-text-editor[mini].is-focused::shadow {
 }
 
 // FIXME: these should go in syntax themes?
-atom-text-editor, atom-text-editor::shadow {
+atom-text-editor {
   .gutter.drop-shadow {
     -webkit-box-shadow: -2px 0 10px 2px #222;
   }
