--- a/index.less
+++ b/index.less
@@ -1,16 +1,22 @@
-@import "styles/atom";
-@import "styles/utilities";
-@import "styles/text";
-@import "styles/git";
-@import "styles/sites";
-@import "styles/messages";
-@import "styles/progress";
-@import "styles/buttons";
-@import "styles/panels";
-@import "styles/panes";
-@import "styles/lists";
-@import "styles/overlays";
-@import "styles/editor";
-@import "styles/tabs";
-@import "styles/tooltips";
-@import "styles/tree-view";
+
+// Atom Dark UI theme
+
+@import "styles/ui-variables.less";
+@import "styles/ui-mixins.less";
+
+@import "styles/atom.less";
+@import "styles/utilities.less";
+@import "styles/text.less";
+@import "styles/git.less";
+@import "styles/sites.less";
+@import "styles/messages.less";
+@import "styles/progress.less";
+@import "styles/buttons.less";
+@import "styles/panels.less";
+@import "styles/panes.less";
+@import "styles/lists.less";
+@import "styles/overlays.less";
+@import "styles/editor.less";
+@import "styles/tabs.less";
+@import "styles/tooltips.less";
+@import "styles/tree-view.less";
