Switch to sytem-ui font

--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -87,4 +87,4 @@
 
 // Other
 
-@font-family: 'BlinkMacSystemFont', 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif;
+@font-family: system-ui;
