--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -4,6 +4,7 @@
 @tab-top-padding: 5px;
 @tab-bottom-border-height: 5px;
 @tab-border: 1px solid @tab-border-color;
+@tab-bar-bottom-border-color: @tab-border-color;
 @tab-max-width: 160px;
 
 .tab-bar {
@@ -16,19 +17,6 @@
 
   &::-webkit-scrollbar {
     display: none;
-  }
-
-  &:after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    height: @tab-bottom-border-height;
-    left: 0;
-    right: 0;
-    background-color: @tab-background-color-active;
-    border-bottom: 1px solid @tab-bar-border-color;
-    border-top: 1px solid @tab-border-color;
-    pointer-events: none;
   }
 
   .tab {
@@ -146,4 +134,18 @@
       margin-left: -10px; // center between tabs
     }
   }
+}
+
+// border
+.tab-bar + .item-views::before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  height: @tab-bottom-border-height;
+  left: 0;
+  right: 0;
+  background-color: @tab-background-color-active;
+  border-top: 1px solid @tab-border-color;
+  border-bottom: 1px solid @tab-bar-bottom-border-color;
+  pointer-events: none;
 }
